turtleart.lessons.turtleart.Main.CircleSquare.scala.error
Source:5: error: not found: value cerle
	cerle(50)
        ^