turtleart.lessons.turtleart.Main.CircleSquare.scala.code
override def run() {
	avance(100)
	droite(90)
	avance(50)
	cerle(50)
	avance(50)
	droite(90)
	avance(100)
	droite(90)
	avance(100)
	droite(90)
	
}
